--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
             "email": "vikas@kapadiya.net"
         }
     ],
-    "require": {},
+    "require": {
+        "guzzlehttp/guzzle": "^6.3",
+        "ext-json": "*"
+    },
     "require-dev": {
         "phpunit/phpunit": "^8.2"
     },
